--- a/SMFX project/AnimPlayer/config.properties
+++ b/SMFX project/AnimPlayer/config.properties
@@ -1,7 +1,9 @@
-#Mon Aug 14 01:42:06 MSK 2023
+#Mon Aug 14 11:20:36 MSK 2023
 embeddedEditorPackages=None
+fixedTabPaths="0x000082D0\\AnimPlayerAnimations.tlsa.tlsa_t"
 isReadOnly=false
-lastTimeUsed=1691966341637
+lastTimeUsed=1691997702219
+packPath=
 packPathType=GALACTIC_ADVENTURES
 packageName=AnimPlayer.package
 sources=
