--- a/AnimPlayer/AnimPlayer.vcxproj
+++ b/AnimPlayer/AnimPlayer.vcxproj
@@ -106,6 +106,7 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -133,6 +134,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="SdkPathConfig.props" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="AnimPlayer.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
