--- a/SMFX project/AnimPlayer/config.properties
+++ b/SMFX project/AnimPlayer/config.properties
@@ -1,9 +1,10 @@
-#Fri Mar 08 02:08:13 MSK 2024
+#Tue Jun 18 23:14:07 MSK 2024
 embeddedEditorPackages=None
 fixedTabPaths="0x000082D0\\AnimPlayerAnimations.tlsa.tlsa_t"
 isReadOnly=false
-lastTimeUsed=1709850629568
+lastTimeUsed=1718740995475
 packPath=
 packPathType=GALACTIC_ADVENTURES
 packageName=AnimPlayer.package
+showOnlyModded=false
 sources=
